--- a/app/views/hybrid_bills/index.haml
+++ b/app/views/hybrid_bills/index.haml
@@ -37,7 +37,7 @@
 
 %section
   .container
-    %h2= "#{t('.object_hybrid_bill').capitalize}"
+    %h2= t('.object_hybrid_bill').capitalize
 
     %p= t('.object_hybrid_bill_a')
 
@@ -47,7 +47,7 @@
 
 %section
   .container
-    %h2= "#{t('.current_hybrid_bills').capitalize}"
+    %h2= t('.current_hybrid_bills').capitalize
 
     %ol.list--block
       %li
