--- a/app/views/hybrid_bills/post.html.haml
+++ b/app/views/hybrid_bills/post.html.haml
@@ -1,36 +1,40 @@
-- page_title = title('Object to the High Speed Rail (West Midlands to Crewe) Bill')
+- page_title = title("#{t('hybrid_bills.object_to').capitalize} #{t('hybrid_bills.the')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}")
 
 #content.section--primary{ tabindex: '0' }
   .container
-    %h1 Object to the High Speed Rail (West Midlands to Crewe) Bill
-    %br
+    %h1= page_title
+
     .status--highlight
-      %p The deadline has passed.
+      %p= t('hybrid_bills.petition_status_post')
 
 %section
   .container
-    %h2 Overview
+    %h2= t('hybrid_bills.show.overview').capitalize
 
-    %p Any individual, group of individuals, organisation or group of organisations affected by the High Speed Rail (West Midlands to Crewe) Bill can object to it.
-
-    %p
-      To find out more about the Bill, visit the
-      = link_to 'https://www.gov.uk/government/organisations/high-speed-two-limited', target: '_blank' do
-        High Speed Two (HS2) Limited website
-        %span.sr-only> (This link will open in a new window).
+    %p= t('hybrid_bills.show.overview_a_bill')
 
     %p
-      For the latest updates, visit the
-      = link_to 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank' do
-        High Speed Rail (West Midlands to Crewe) Bill Committee website
-        %span.sr-only> (This link will open in a new window).
+      = t('hybrid_bills.show.overview_b')
+      = succeed "." do
+        = link_to 'https://www.gov.uk/government/organisations/high-speed-two-limited', target: '_blank' do
+          = t('hybrid_bills.show.overview_c')
+          %span.sr-only>
+            = t('open_new_window_link')
+
+    %p
+      = t('hybrid_bills.show.overview_post')
+      = succeed "." do
+        = link_to 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank' do
+          = "#{t('hybrid_bills.hs2_committee')} #{t('hybrid_bills.hs2_website')}"
+          %span.sr-only>
+            = t('open_new_window_link')
 
     %br
     .block.accent--mint
-      %h3 Help and support
+      %h3= t('hybrid_bills.help_support').capitalize
       %p
-        For more information email
-        = link_to 'prbohoc@parliament.uk', 'mailto:prbohoc@parliament.uk'
-        or phone
+        = t('hybrid_bills.help_support_a')
+        = link_to t('hybrid_bills.help_support_email'), "mailto:#{t('hybrid_bills.help_support_email')}"
+        = t('hybrid_bills.help_support_b')
         = succeed "." do
-          = link_to '020 7219 3250', 'tel:02072193250'
+          = link_to t('hybrid_bills.help_support_phone'), "tel:#{t('hybrid_bills.help_support_phone').gsub(/\s+/, "")}"
