--- a/app/views/hybrid_bills/pre.html.haml
+++ b/app/views/hybrid_bills/pre.html.haml
@@ -1,30 +1,34 @@
-- page_title = title('Object to the High Speed Rail (West Midlands to Crewe) Bill')
+- page_title = title("#{t('hybrid_bills.object_to').capitalize} #{t('hybrid_bills.the')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}")
 
 #content.section--primary{ tabindex: '0' }
   .container
-    %h1 Object to the High Speed Rail (West Midlands to Crewe) Bill
-    %br
+    %h1= page_title
+
     .status--highlight
-      %p The petitioning period will open on 30 January 2018.
+      %p= t('hybrid_bills.petition_status_pre')
 
 %section
   .container
-    %h2 Overview
+    %h2= t('hybrid_bills.show.overview').capitalize
 
-    %p Any individual, group of individuals, organisation or group of organisations affected by the High Speed Rail (West Midlands to Crewe) Bill can object to it.
+    %p= t('hybrid_bills.show.overview_a_bill')
 
     %p
-      To find out more about the Bill, visit the
-      = link_to 'https://www.gov.uk/government/organisations/high-speed-two-limited', target: '_blank' do
-        High Speed Two (HS2) Limited website
-        %span.sr-only> (This link will open in a new window).
+      = t('hybrid_bills.show.overview_b')
+      = succeed "." do
+        = link_to 'https://www.gov.uk/government/organisations/high-speed-two-limited', target: '_blank' do
+          = t('hybrid_bills.show.overview_c')
+          %span.sr-only>
+            = t('open_new_window_link')
 
 %section
   .container
-    %h2 Objecting to the Bill
+    %h2= t('hybrid_bills.show.object_bill').capitalize
 
     %p
-      For more information on how to object, visit the
-      = link_to 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank' do
-        High Speed Rail (West Midlands to Crewe) Bill Committee website
-        %span.sr-only> (This link will open in a new window).
+      = t('hybrid_bills.show.object_bill_pre')
+      = succeed "." do
+        = link_to 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank' do
+          = "#{t('hybrid_bills.hs2_committee')} #{t('hybrid_bills.hs2_website')}"
+          %span.sr-only>
+            = t('open_new_window_link')
