--- a/app/views/hybrid_bills/steps/forms/components/_check_box.haml
+++ b/app/views/hybrid_bills/steps/forms/components/_check_box.haml
@@ -1,3 +1,3 @@
 .input-group
   = f.check_box attribute
-  = f.label attribute, 'I would like to receive updates from the High Speed Rail (West Midlands to Crewe) Bill Committee'
+  = f.label attribute, "#{t('user_forms.updates').capitalize} #{t('hybrid_bills.hs2_committee')}"
