--- a/app/views/hybrid_bills/steps/forms/components/_radio_buttons.haml
+++ b/app/views/hybrid_bills/steps/forms/components/_radio_buttons.haml
@@ -1,9 +1,9 @@
 .input-group__inline
   = f.radio_button attribute, true, value: true, checked: true, class: local_assigns.fetch(:yes_class, nil)
-  = f.label attribute, local_assigns.fetch(:yes_label, 'Yes'), value: true
+  = f.label attribute, local_assigns.fetch(:yes_label, t('user_forms.yes_radio').capitalize), value: true
 .input-group__inline
   = f.radio_button attribute, false, value: false, class: local_assigns.fetch(:no_class, nil)
-  = f.label attribute, local_assigns.fetch(:no_label, 'No'), value: false
+  = f.label attribute, local_assigns.fetch(:no_label, t('user_forms.no_radio').capitalize), value: false
 
 - if f.object.errors[attribute].present?
   %p.message--error Please select one
