--- a/app/views/hybrid_bills/steps/writing-your-petition-online.haml
+++ b/app/views/hybrid_bills/steps/writing-your-petition-online.haml
@@ -1,13 +1,15 @@
-- page_title = title('Writing your petition online. Object to the High Speed Rail (West Midlands to Crewe) Bill')
+- page_title = title("#{t('hybrid_bills.email.writing_petition').capitalize} #{t('hybrid_bills.hyphen')} #{t('hybrid_bills.writing-your-petition-online.online')}. #{t('hybrid_bills.object_to').capitalize} #{t('hybrid_bills.the')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}")
+
 
 #content.hero.theme--grey-4{ tabindex: '0' }
   .container
     %h1
-      Writing your petition - online
+      = "#{t('hybrid_bills.email.writing_petition').capitalize} #{t('hybrid_bills.hyphen')} #{t('hybrid_bills.writing-your-petition-online.online')}"
       %span.sr-only .
-      %span Object to the High Speed Rail (West Midlands to Crewe) Bill
+      %span= "#{t('hybrid_bills.object_to').capitalize} #{t('hybrid_bills.the')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"
 
-    %h2.typography--light Step 1 of 5
+    %h2.typography--light
+      = "#{t('hybrid_bills.step_1').capitalize} #{t('hybrid_bills.step_1_5')}"
 
 %section
   .container
@@ -17,15 +19,15 @@
       .status--highlight.theme--caution
         %p= t('javascript_disabled')
 
-    %h2 To write your petition
+    %h2= t('hybrid_bills.writing-your-petition-online.to_write_petition').capitalize
 
     %ol
-      %li download and save the petition template to your device
-      %li complete the petition template
-      %li save your completed template
-      %li click the link at the end of your template to continue the process
+      %li= t('hybrid_bills.writing-your-petition-online.to_write_petition_a')
+      %li= t('hybrid_bills.writing-your-petition-online.to_write_petition_b')
+      %li= t('hybrid_bills.writing-your-petition-online.to_write_petition_c')
+      %li= t('hybrid_bills.writing-your-petition-online.to_write_petition_d')
 
-    %p We’ll ask you to upload your completed template later.
+    %p= t('hybrid_bills.writing-your-petition-online.to_write_petition_e')
 
     %ol.list--pipe__deep
       %li
@@ -33,37 +35,38 @@
           = render partial: 'pugin/icons/file'
 
         .list--details
-          %h3 Petition template
+          %h3= t('hybrid_bills.help_support_template').capitalize
 
           %a{ href: 'https://s3-eu-west-1.amazonaws.com/web1live.static-assets-public/_hybrid-bills/documents/HS2-Phase-2a-Petition-Template-Online.doc', class: 'btn--primary' }
             = render partial: 'pugin/icons/download'
-            Download template as Word document
+            = t('user_forms.word_download_button')
 
           %p
-            If you need a different format, email
-            = link_to 'prbohoc@parliament.uk', 'mailto:prbohoc@parliament.uk'
-            or phone
+            = t('hybrid_bills.help_support_format')
+            = link_to t('hybrid_bills.help_support_email'), "mailto:#{t('hybrid_bills.help_support_email')}"
+            = t('hybrid_bills.help_support_b')
             = succeed "." do
-              = link_to '020 7219 3250', 'tel:02072193250'
+              = link_to t('hybrid_bills.help_support_phone'), "tel:#{t('hybrid_bills.help_support_phone').gsub(/\s+/, "")}"
 
 %section#complete-petition.section--major
   .container
-    %h2.typography--light Have you completed your petition template?
+    %h2= t('hybrid_bills.writing-your-petition-online.completed_template').capitalize
 
     = form_tag hybrid_bill_path(@business_id, step: 'petition-online') do
       .block--border__bottom
         .section--minor
           %fieldset
-            %legend.sr-only Please confirm that you completed your petition template
+            %legend.sr-only
+              = t('hybrid_bills.writing-your-petition-online.completed_template_legend').capitalize
             .input-group__inline
               = radio_button_tag 'petition-check', 'yes', class: 'js-petition-check-yes'
-              = label_tag 'petition-check_yes', 'Yes'
+              = label_tag 'petition-check_yes', t('user_forms.yes_radio').capitalize
             .input-group__inline
               = radio_button_tag 'petition-check', 'no', true, class: 'js-petition-check-no',  data:{ submit: 'disabled' }
-              = label_tag 'petition-check_no', 'No'
+              = label_tag 'petition-check_no', t('user_forms.no_radio').capitalize
 
         .status--highlight.theme--caution#petitionCheckStatus
-          %p Complete your petition template before you continue
+          %p= t('hybrid_bills.writing-your-petition-online.complete_template').capitalize
 
       %noscript
         .status--highlight.theme--warning
@@ -82,17 +85,17 @@
                 = t('hybrid_bills.object_by_email')
         %br
 
-      = submit_tag 'Next', class: 'btn--primary'
+      = submit_tag t('user_forms.next_button').capitalize, class: 'btn--primary'
 
       %p
-        =link_to 'Back', hybrid_bill_path(@business_id)
+        =link_to t('user_forms.back_button').capitalize, hybrid_bill_path(@business_id)
 
       %br
       .block.accent--mint
-        %h3 Help and support
+        %h3= t('hybrid_bills.help_support').capitalize
         %p
-          For more information email
-          = link_to 'prbohoc@parliament.uk', 'mailto:prbohoc@parliament.uk'
-          or phone
+          = t('hybrid_bills.help_support_a')
+          = link_to t('hybrid_bills.help_support_email'), "mailto:#{t('hybrid_bills.help_support_email')}"
+          = t('hybrid_bills.help_support_b')
           = succeed "." do
-            = link_to '020 7219 3250', 'tel:02072193250'
+            = link_to t('hybrid_bills.help_support_phone'), "tel:#{t('hybrid_bills.help_support_phone').gsub(/\s+/, "")}"
